<resources>
    <string name="app_name">SportsDiscovery</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="sport_list_fragment_label">Sport List Fragment</string>
    <string name="sport_detail_fragment_label">Sport Detail Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="animal_item_image">Picture of Animal</string>
    <string name="draw_label">Draw</string>

    <!-- Strings used for App bottom menu -->
    <string name="user_account">Account</string>
    <string name="sports_title">Sports</string>
    <string name="user_balance_label">Balance</string>
    <string name="user_number_bets_label">Bets #</string>
    <string name="history_button_label">See History</string>
    <string name="login_name_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="enter_sport_title">Enter Sport Title</string>

    <string name="no_internet">No Internet</string>
    <string name="invalid_api_key">Invalid TMDb API Key</string>
    <string name="attribution_message">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="search_event">Search events</string>
    <string name="place_bet">Place Bet</string>
    <string name="bet_amount">Bet amount</string>
    <string name="football_icon">Football image</string>
    <string name="no_results">NO RESULTS FOUND</string>

    <string name="event_details">%1$s vs %2$s</string>
    <string name="stake">Stake</string>
    <string name="total">Total</string>
    <string name="remove_pending_bet">Remove Pending Bet</string>
    <string name="page_title">Sports Discovery</string>
    <string name="mark_won">Mark Bet as won</string>
    <string name="mark_lost">Mark Bet as lost</string>
    <string name="stake_odd">%1$s x %2$s</string>
    <string name="bets_submit_success">Bets submitted successfully!</string>
    <string name="bets_submit_failure">Not enough money to make those bets</string>

</resources>